# StoneVoicer-Demo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/github/com/stonevoicer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: StoneVoicer.cpp  github_com_stonevoicer_VoicerUtil.h
app/src/main/java/github/com/stonevoicer/: MainActivity.java  VoicerUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/github/com/stonevoicer/: ExampleUnitTest.java
